--- a/index.html
+++ b/index.html
@@ -347,14 +347,13 @@
       Юнайтед» Криштиану Роналду, установил новый рекорд по количеству голов, забитых в сезоне полузащитником.</p>
    <p>«Манчестер Юнайтед» стал первым клубом, забившим 1000 голов в Премьер-лиге. Юбилейный мяч забил Криштиану
       Роналду в матче против «Мидлсбро» в сезоне 2005/06. После этого лишь три клуба, «Арсенал», «Челси» и
-      «Ливерпуль», смогли достичь отметки в 1000 забитых голов в Премьер-лиге[52][53]. Самый результативный на
+      «Ливерпуль», смогли достичь отметки в 1000 забитых голов в Премьер-лиге. Самый результативный на
       настоящее время матч Премьер-лиги состоялся 29 сентября 2007 года, когда «Портсмут» выиграл у «Рединга» со
       счётом 7:4.</p>
    <p>Бывшему игроку «Манчестер Юнайтед» Райану Гиггзу принадлежит уникальный рекорд по забитым мячам: он забивал в
       21 сезоне Премьер-лиги подряд.</p>
    <h3>Лучшие бомбардиры за всю историю лиги:</h3>
-   <img src="/img/Alan_Shearer_2008.jpg" width="
-   180" height="175" alt="Алан Ширер, 2008" class="rightpic">
+   <img src="/img/Alan_Shearer_2008.jpg" width="180" height="175" alt="Алан Ширер, 2008" class="rightpic">
 
    <ol>
       <li><a href="https://ru.wikipedia.org/wiki/Ширер,_Алан"><span title="Алан Ширер">Алан Ширер</a></span> - 260 голов
