--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
    <div id="p1">
       <h1>
-         <center>Английская премьер лига</center>
+         Английская премьер лига
       </h1>
       <img src="img/Premier_League_Logo.png" alt="Premier League Logo">
 
@@ -63,9 +63,9 @@
 
 
    <h2>
-      <center>Клубы-участники Премьер-лиги в сезоне 2022/23</center>
+      Клубы-участники Премьер-лиги в сезоне 2022/23
    </h2>
-   <img src="img/epl clubs.jpeg" alt="Premier League clubs 2022/2023" width="900" height="480" class="rightpic">
+   <img src="/img/epl_clubs.jpeg" alt="Premier League clubs 2022/2023" width="900" height="480" class="rightpic">
    <Ul>
       <li>
          <span title="Арсенал"><a href="https://ru.wikipedia.org/wiki/Арсенал_(футбольный_клуб,_Лондон)"
@@ -155,7 +155,7 @@
       </li>
    </Ul><br>
    <h2>
-      <center>История</center>
+      История
    </h2>
    <h3>История образования</h3>
    <p>Несмотря на значительные успехи английских клубов в еврокубках в 1970-е годы, в конце 1980-х в английском
@@ -242,7 +242,7 @@
       2007/08 начался как обычно, с 20 командами-участниками. В 2007 году официальное название турнира было сокращено
       с «Премьер-лиги Футбольной ассоциации» (FA Premier League) до «Премьер-лиги» (Premier League).</p>
    <h2>
-      <center>Корпоративная структура</center>
+      Корпоративная структура
    </h2>
    <p>Премьер-лига функционирует как корпорация, владельцами которой являются 20 клубов-участников. Каждый клуб
       является акционером с одним голосом по вопросам, связанным с изменением правил проведения турнира или
@@ -255,7 +255,7 @@
       членов в Комитет клубных турниров УЕФА, который занимается вопросами функционирования таких турниров как Лига
       чемпионов УЕФА и Лига Европы УЕФА.</p>
    <h2>
-      <center>Формат проведения и спонсоры</center>
+      Формат проведения и спонсоры
    </h2>
    <h3>Формат соревнования</h3>
    <p>В настоящее время в Премьер-лиге выступает 20 клубов. По ходу сезона, который длится с августа по май, каждый
@@ -315,7 +315,7 @@
    <p>Кроме того, у Премьер-лиги есть перечень партнёров и поставщиков, который включает Barclays, Carling, EA
       Sports, Nike и TAG Heuer.</p>
    <h2>
-      <center>Чемпионский кубок Премьер-лиги</center>
+      Чемпионский кубок Премьер-лиги
    </h2>
    <p>Кубок Премьер-лиги был создан компанией Royal Jewellers (Garrard & Co). Он весит 25 кг, а по размерам
       составляет 76 см в высоту, 43 см в ширину и 25 см в глубину. Кубок отлит из серебра 925 пробы и покрыт
@@ -327,7 +327,7 @@
       менялась несколько раз: от оригинальной The F.A. Premier League до The Barclays Premiership, а затем просто
       Premier League.</p>
    <h2>
-      <center>Лучшие бомбардиры Премьер-лиги</center>
+      Лучшие бомбардиры Премьер-лиги
    </h2>
    <p>Кроме командной борьбы, игроки Премьер-лиги соревнуются в сфере признания своего индивидуального мастерства.
       Для этого существуют неформальные награды, например, «гол месяца» и «гол сезона», а также гонка бомбардиров
@@ -356,26 +356,26 @@
    <img src="/img/Alan_Shearer_2008.jpg" width="180" height="175" alt="Алан Ширер, 2008" class="rightpic">
 
    <ol>
-      <li><a href="https://ru.wikipedia.org/wiki/Ширер,_Алан"><span title="Алан Ширер">Алан Ширер</a></span> - 260 голов
+      <li><a href="https://ru.wikipedia.org/wiki/Ширер,_Алан"><span title="Алан Ширер">Алан Ширер</span></a> - 260 голов
       </li>
-      <li><a href="https://ru.wikipedia.org/wiki/Руни,_Уэйн"><span title="Уэйн Руни">Уэйн Руни</a></span> - 208 голов
+      <li><a href="https://ru.wikipedia.org/wiki/Руни,_Уэйн"><span title="Уэйн Руни">Уэйн Руни</span></a> - 208 голов
       </li>
-      <li><a href="https://ru.wikipedia.org/wiki/Кейн,_Гарри"><span title="Гарри Кейн">Гарри Кейн</a></span> - 190 голов
+      <li><a href="https://ru.wikipedia.org/wiki/Кейн,_Гарри"><span title="Гарри Кейн">Гарри Кейн</span></a> - 190 голов
       </li>
-      <li><a href="https://ru.wikipedia.org/wiki/Коул,_Энди"><span title="Эндрю Коул">Эндрю Коул</a></span> - 187 голов
+      <li><a href="https://ru.wikipedia.org/wiki/Коул,_Энди"><span title="Эндрю Коул">Эндрю Коул</span></a> - 187 голов
       </li>
-      <li><a href="https://ru.wikipedia.org/wiki/Агуэро,_Серхио"><span title="Серхио Агуэро">Серхио Агуэро</a></span> -
+      <li><a href="https://ru.wikipedia.org/wiki/Агуэро,_Серхио"><span title="Серхио Агуэро">Серхио Агуэро</span></a> -
          184 голов</li>
-      <li><a href="https://ru.wikipedia.org/wiki/Лэмпард,_Фрэнк"><span title="Фрэнк Лэмпард">Фрэнк Лэмпард</a></span> -
+      <li><a href="https://ru.wikipedia.org/wiki/Лэмпард,_Фрэнк"><span title="Фрэнк Лэмпард">Фрэнк Лэмпард</span></a> -
          177 голов</li>
-      <li><a href="https://ru.wikipedia.org/wiki/Анри,_Тьерри"><span title="Тьерри Анри">Тьерри Анри</a></span> - 175
+      <li><a href="https://ru.wikipedia.org/wiki/Анри,_Тьерри"><span title="Тьерри Анри">Тьерри Анри</span></a> - 175
          голов</li>
-      <li><a href="https://ru.wikipedia.org/wiki/Фаулер,_Робби"><span title="Робби Фаулер">Робби Фаулер</a></span> - 163
+      <li><a href="https://ru.wikipedia.org/wiki/Фаулер,_Робби"><span title="Робби Фаулер">Робби Фаулер</span></a> - 163
          голов</li>
-      <li><a href="https://ru.wikipedia.org/wiki/Дефо,_Джермейн"><span title="Джермейн Дефо">Джермейн Дефо</a></span> -
+      <li><a href="https://ru.wikipedia.org/wiki/Дефо,_Джермейн"><span title="Джермейн Дефо">Джермейн Дефо</span></a> -
          162 голов</li>
-      <li><a href="https://ru.wikipedia.org/wiki/Оуэн,_Майкл"><span title="Майкл Оуэн">Майкл Оуэн</a></span> 150 -
-         голов<span class="rightpic">Аллан Ширер</span>
+      <li><a href="https://ru.wikipedia.org/wiki/Оуэн,_Майкл"><span title="Майкл Оуэн">Майкл Оуэн</span></a> 150 -
+         голов<span class="rightpic">Аллан Ширер
       </li>
    </ol>
 
@@ -385,7 +385,7 @@
    <br>
 
    <div><a href="#p1">
-         <center><mark>НАВЕРХ</mark></center>
+         <mark>НАВЕРХ</mark>
       </a></div></br>
 </footer>
 
