--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       частью плана Платини по увеличению количества команд, выходящих в групповую стадию Лиги чемпионов напрямую, и
       одновременно увеличению количества команд из более слабых дивизионов</p>
    <h3>
-      <center>Спонсоры</center>
+      Спонсоры
    </h3>
    <p>С 1993 по 2016 годы Премьер-лига имела официального спонсора. Спонсор определял официальное название
       чемпионата. Ниже представлен список спонсоров Премьер-лиги и официальные названия турнира:</p>
@@ -375,18 +375,15 @@
       <li><a href="https://ru.wikipedia.org/wiki/Дефо,_Джермейн"><span title="Джермейн Дефо">Джермейн Дефо</span></a> -
          162 голов</li>
       <li><a href="https://ru.wikipedia.org/wiki/Оуэн,_Майкл"><span title="Майкл Оуэн">Майкл Оуэн</span></a> 150 -
-         голов<span class="rightpic">Аллан Ширер
-      </li>
+         голов</li>
+
    </ol>
 
 </main>
 <footer>
-   <br>
-   <br>
-
    <div><a href="#p1">
          <mark>НАВЕРХ</mark>
-      </a></div></br>
+      </a></div>
 </footer>
 
 </body>
