--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    <h2>
       Клубы-участники Премьер-лиги в сезоне 2022/23
    </h2>
-   <img src="/img/epl_clubs.jpeg" alt="Premier League clubs 2022/2023" width="900" height="480" class="rightpic">
+   <img src="img/epl_clubs.jpeg" alt="Premier League clubs 2022/2023" width="900" height="480" class="rightpic">
    <Ul>
       <li>
          <span title="Арсенал"><a href="https://ru.wikipedia.org/wiki/Арсенал_(футбольный_клуб,_Лондон)"
@@ -353,7 +353,7 @@
    <p>Бывшему игроку «Манчестер Юнайтед» Райану Гиггзу принадлежит уникальный рекорд по забитым мячам: он забивал в
       21 сезоне Премьер-лиги подряд.</p>
    <h3>Лучшие бомбардиры за всю историю лиги:</h3>
-   <img src="/img/Alan_Shearer_2008.jpg" width="180" height="175" alt="Алан Ширер, 2008" class="rightpic">
+   <img src="img/Alan_Shearer_2008.jpg" width="180" height="175" alt="Алан Ширер, 2008" class="rightpic">
 
    <ol>
       <li><a href="https://ru.wikipedia.org/wiki/Ширер,_Алан"><span title="Алан Ширер">Алан Ширер</span></a> - 260 голов
@@ -381,6 +381,7 @@
 
 </main>
 <footer>
+
    <div><a href="#p1">
          <mark>НАВЕРХ</mark>
       </a></div>
